--- a/src/client/index.html
+++ b/src/client/index.html
@@ -1,8 +1,17 @@
 <html>
   <head>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.js"></script>
-    <script src="sketch.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.js"></script>
+      <script src="/socket.io/socket.io.js"></script>
+      <script src="app.js"></script>
+      <script src="sketch.js"></script>
+
+    <!-- <script src="./app.js"></script> -->
+    <!-- <script src="./sketch.js"></script> -->
+
   </head>
   <body>
+    <div id = "holder">
+
+    </div>
   </body>
 </html>
