--- a/src/client/canvas.html
+++ b/src/client/canvas.html
@@ -1,9 +1,18 @@
 <html>
   <head>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.js"></script>
-    <!-- <script src="./app.js"></script> -->
+    <script src="./p5/p5.js"></script>
+    <script src="sketch2.js"></script>
+    <script language="javascript" type="text/javascript" src="./p5/addons/p5.dom.js"></script>
 
   </head>
   <body>
+    <button onclick="one()">asdfas</button>
   </body>
+  <script>
+    function one()
+    {
+      loop();
+    }
+  </script>
+
 </html>
