--- a/src/client/index.html
+++ b/src/client/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.js"></script>
+      <script src="./p5/p5.js"></script>
+      <script src="./p5/addons/p5.dom.js"></script>
       <script src="/socket.io/socket.io.js"></script>
       <script src="app.js"></script>
       <script src="sketch.js"></script>
@@ -10,6 +11,11 @@
 
   </head>
   <body>
+    <div id = "Input">
+        <input type="text" id = "name">
+        <br>
+        <button onclick="playStart()">게임 참가!</button>
+    </div>
     <div id = "holder">
 
     </div>
